Enable editing of NGS measurements